--- a/templates/index1.html
+++ b/templates/index1.html
@@ -4291,7 +4291,7 @@ ________________________________________________________________________________
         document.cookie = "c_wow_name=" + company_name + '; expires=1609415999; path=/';
         $.ajax({
             type: 'GET',
-            url: 'http://chatbot.wow.jobs.dev',
+            url: 'http://chatbot.wow.jobs',
             async: false,
             success: function(response) {
                 $(document).find('#chat-widget').html(response);
