--- a/templates/botnew.html
+++ b/templates/botnew.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
     <!-- <link rel="stylesheet" href="http://chatbot.wow.jobs.dev/static/owl/dist/assets/owl.theme.default.min.css"> -->
-    <link rel="stylesheet" href="http://chatbot.wow.jobs.dev/static/css/style.css">
+    <link rel="stylesheet" href="http://chatbot.wow.jobs/static/css/style.css">
     <!-- Latest compiled and minified JavaScript -->
 </head>
 
@@ -27,8 +27,8 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAFVHZ3Ocumy7N6ToR-zHlY47rrdweqvug&sensor=false"></script>
-    <script src="http://chatbot.wow.jobs.dev/static/js/jquery_cookie.js"></script>
-    <script src="http://chatbot.wow.jobs.dev/static/js/ajax_response.js"></script>
+    <script src="http://chatbot.wow.jobs/static/js/jquery_cookie.js"></script>
+    <script src="http://chatbot.wow.jobs/static/js/ajax_response.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
 </body>
 <script>
