Live changes with the HTTPS changes also

--- a/templates/botnew.html
+++ b/templates/botnew.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
     <!-- <link rel="stylesheet" href="http://chatbot.wow.jobs.dev/static/owl/dist/assets/owl.theme.default.min.css"> -->
-    <link rel="stylesheet" href="http://chatbot.wow.jobs/static/css/style.css">
+    <link rel="stylesheet" href="https://chatbot.wow.jobs/static/css/style.css">
     <!-- Latest compiled and minified JavaScript -->
 </head>
 
@@ -21,19 +21,19 @@
             </div>
             <div class="custom-input">
                 <input type="text" id='query' onkeypress="handle(event)" placeholder="Your input here...">
-                <button id='button' class="scroll"><img src="http://chatbot.wow.jobs/static/images/chat/save.png" alt="image"></button>
+                <button id='button' class="scroll"><img src="https://chatbot.wow.jobs/static/images/chat/save.png" alt="image"></button>
             </div>
         </div>
         <div class="chatimage">
-                <span class="minmizeIt"><img  src="http://chatbot.wow.jobs/static/images/chat/chat-bubble.png" alt=""></span>
+                <span class="minmizeIt"><img  src="https://chatbot.wow.jobs/static/images/chat/chat-bubble.png" alt=""></span>
         </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAFVHZ3Ocumy7N6ToR-zHlY47rrdweqvug&sensor=false"></script>
-    <script src="http://chatbot.wow.jobs/static/js/jquery_cookie.js"></script>
+    <script src="https://chatbot.wow.jobs/static/js/jquery_cookie.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js"></script>
-    <script src="http://chatbot.wow.jobs/static/js/ajax_response.js"></script>
+    <script src="https://chatbot.wow.jobs/static/js/ajax_response.js"></script>
 </body>
 <script>
     $('.minmizeIt').click(function() {
