Live Cahnges and Owl Carousel Changes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8552,7 +8552,7 @@ fieldset[disabled] .bootstrap-hold .navbar-inverse .btn-link:focus {
 
 .bootstrap-hold .bot-holder .owl-carousel .owl-nav .owl-prev {
     left: 0 !important;
-    background-image: url("http://chatbot.wow.jobs/static/images/chat/bg-gradient-left.png") !important;
+    background-image: url("https://chatbot.wow.jobs/static/images/chat/bg-gradient-left.png") !important;
 }
 
 .bootstrap-hold .bot-holder .owl-carousel .owl-nav .owl-prev img {
@@ -8561,7 +8561,7 @@ fieldset[disabled] .bootstrap-hold .navbar-inverse .btn-link:focus {
 
 .bootstrap-hold .bot-holder .owl-carousel .owl-nav .owl-next {
     right: 0 !important;
-    background-image: url("http://chatbot.wow.jobs/static/images/chat/bg-gradient.png") !important;
+    background-image: url("https://chatbot.wow.jobs/static/images/chat/bg-gradient.png") !important;
 }
 
 .bootstrap-hold .bot-holder .owl-carousel .owl-nav .owl-next img {
