--- a/templates/botnew.html
+++ b/templates/botnew.html
@@ -5,7 +5,7 @@
     <meta name="theme-color" content="#0086bf" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>Chatbot</title>
-    <link rel="stylesheet" href="https://chatbot.wow.jobs/static/css/style.css">
+    <link href="https://chatbot.wow.jobs/static/css/style.css" rel="stylesheet">
     <link href="https://chatbot.wow.jobs/static/owl-carousel/owl.carousel.css" rel="stylesheet">
     <link href="https://chatbot.wow.jobs/static/owl-carousel/owl.theme.css" rel="stylesheet">
     <!-- Latest compiled and minified JavaScript -->
