--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8160,7 +8160,7 @@ fieldset[disabled] .bootstrap-hold .navbar-inverse .btn-link:focus {
         left: 0 !important;
         right: 0 !important;
         top: 0 !important;
-        bottom: 0 !important;
+    bottom: 80px !important;
         width: 100% !important;
         height: auto !important;
     }
@@ -8190,8 +8190,12 @@ fieldset[disabled] .bootstrap-hold .navbar-inverse .btn-link:focus {
 
 @media screen and (max-width: 767px) {
     .bootstrap-hold .bot-holder .bot-content {
-        height: auto !important;
+                height: auto !important;
+    max-height: 90%;
+    border-bottom: 0 !important;
+            padding-top: 60px !important;
     }
+
 }
 
 .bootstrap-hold .bot-holder .bot-content::-webkit-scrollbar {
@@ -8849,4 +8853,27 @@ fieldset[disabled] .bootstrap-hold .navbar-inverse .btn-link:focus {
 
 .bootstrap-hold .bot-holder .owl-buttons {
     display: block !important;
+}
+
+@media screen and (max-width: 767px) {
+    .bot-holder {
+        display: none;
+    }
+    .bootstrap-hold .bot-holder .headIng {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        z-index: 10;
+    }
+    .bootstrap-hold .bot-holder .custom-input {
+            display: block !important;
+            position: absolute !important;
+            bottom: 0 !important;
+            left: 0 !important;
+            right: 0 !important;
+            border-top: 1px solid #d7d5d5 !important;
+            border-left: 0 !important;
+            border-right: 0 !important;
+    }
 }
