--- a/templates/botnew.html
+++ b/templates/botnew.html
@@ -12,7 +12,7 @@
 <body>
     <div class="bootstrap-hold">
         <div class="bot-holder">
-            <div class="headIng" > Hi from Wowee</div>
+            <div class="headIng" > Hi from Wowee <span class="minmizeIt">-</span></div>
             <div class="bot-content" id="result">
             </div>
             <div class="custom-input">
